--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -63,13 +63,13 @@ p {
 /* header */
 
 #logo {
-  float: left;
-  margin-right: 10px;
+  //float: left;
+  //margin-right: 10px;
   font-size: 1.7em;
   color: white;
   text-transform: uppercase;
   letter-spacing: -1px;
-  padding-top: 9px;
+  //padding-top: 9px;
   font-weight: bold;
   &:hover {
     color: white;
