--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
   <small>
-    The <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
+    The <a href="#">Grade Export Application</a>
+    by <a href="#">Reza - Learning and Collaboration Platforms &copy; <%= Time.now.year %></a>
   </small>
   <nav>
     <ul>
