updated grades controller/view

--- a/app/views/grade_export/grades.html.erb
+++ b/app/views/grade_export/grades.html.erb
@@ -20,7 +20,7 @@
         <% if enrollment['type'] == 'StudentEnrollment' %>
             <tr>
               <td>
-                <%= extract_details(enrollment['sis_section_id'], CourseDetail::SUBJECT).upcase %>
+                <%= extract_details(enrollment['sis_course_id'], CourseDetail::SUBJECT).upcase %>
                 <%= extract_details(enrollment['sis_course_id'], CourseDetail::NUMBER).upcase %>
               </td>
               <td><%= extract_details(enrollment['sis_course_id'], CourseDetail::SECTION).upcase %></td>
