--- a/app/views/grade_export/grades.html.erb
+++ b/app/views/grade_export/grades.html.erb
@@ -1,8 +1,8 @@
 <% provide(:title, 'View Grades') %>
 
-<div class="panel panel-primary">
+<!-- <div class="panel panel-primary"> -->
   <!-- Default panel contents -->
-  <div class="panel-heading">Grade Report</div>
+  <!-- <div class="panel-heading">Grade Report</div> -->
   <!-- Table -->
   <table class="table">
     <thead>
@@ -33,7 +33,7 @@
     <% end %>
     </tbody>
   </table>
-</div>
+<!-- </div> -->
 
 <% @json_response.each do |enrollment| %>
     <p><%= enrollment%></p>
