Changed UI styles, restricted access, added/modified controller and view for retrieving all grades.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -169,3 +169,27 @@ input {
   }
 }
 
+.btn-primary {
+  background-color: #008ee2;
+}
+
+.navbar-inverse {
+  background-color: #394b58;
+  .navbar-nav {
+    li {
+      a {
+        color: #ffffff;
+        &:hover {
+          color: #999999;
+        }
+      }
+    }
+  }
+}
+
+.dropdown-menu {
+  background-color: #394b58;
+}
+
+
+
