--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,5 +18,5 @@
   </aside>
 </div>
 <div class="row">
-  <div class="center"><%= link_to "Get Started!", oauth_start_path, class: "btn btn-lg btn-primary" %></div>
+  <div class="center"><%= link_to "Get Started!", oauth_start_path, class: "btn btn-lg btn-default" %></div>
 </div>
