--- a/app/views/grade_export/courses.html.erb
+++ b/app/views/grade_export/courses.html.erb
@@ -4,7 +4,7 @@
   <h3>Your Courses:</h3>
   <br>
   <div class="row">
-    <% @json_response.each do |course| %>
+    <% @courses.each do |course| %>
         <div class="col-sm-6 col-md-4">
           <div class="thumbnail">
             <%= link_to image_tag("course_cover.svg", alt: "Rails logo"), 'http://rubyonrails.org/' %>
@@ -21,4 +21,4 @@
 
 
 
-<p> <%= @json_response %> </p>
+<p> <%= @courses %> </p>
