--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,14 @@
-<footer class="footer">
-  <small>
-    The <a href="#">Grade Export Application</a>
-    by <a href="#">Reza - Learning and Collaboration Platforms &copy; <%= Time.now.year %></a>
-  </small>
-  <nav>
-    <ul>
-      <li><%= link_to "About",   '#' %></li>
-      <li><%= link_to "Contact", '#' %></li>
-      <li><a href="http://news.railstutorial.org/">News</a></li>
-    </ul>
-  </nav>
+<footer class="footer navbar-fixed-bottom">
+  <div class="container">
+    <small>
+      <a href="#">Grade Export Application</a>
+      by <a href="#">Learning and Collaboration Platforms &copy; <%= Time.now.year %> Simon Fraser University</a>
+    </small>
+    <nav>
+      <ul>
+        <li><%= link_to "About",   about_path %></li>
+        <li><%= link_to "Contact", '#' %></li>
+      </ul>
+    </nav>
+  </div>
 </footer>
