--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,5 +6,5 @@
     This application is build to help you export your grades to SIS with ease.
   </h2>
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to "Login via SFU Canvas", 'https://canvas.sfu.ca', class: "btn btn-lg btn-default" %>
 </div>
