--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -81,6 +81,7 @@ p {
 /* footer */
 
 footer {
+  background-color: white;
   margin-top: 45px;
   padding-top: 5px;
   border-top: 1px solid $gray-medium-light;
