--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,6 +21,6 @@
 <div class="row">
   <!--<div class="center"><%# link_to "Get Started!", oauth_start_path, class: "btn btn-lg btn-default" %></div>-->
   <div class="center">
-    <%= link_to "Get Started!", token_has_expired? ? oauth_start_path : courses_path, class: "btn btn-lg btn-default" %>
+    <%= link_to "Get Started!", courses_path, class: "btn btn-lg btn-default" %>
   </div>
 </div>
