--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,8 +10,8 @@
           <li>User Id: <%= @user.id %></li>
           <li>User Email<%= @user.email %></li>
           <li>Is logged in: <%= logged_in? %></li>
-          <li>Session id: <%= session[:session_id] %></li>
-          <li>User Id from Session: <%= session[:user_id] %></li>
+          <!--<li>Session id: <%# session[:session_id] %></li>-->
+          <!--<li>User Id from Session: <%# session[:user_id] %></li>-->
           <!--<li>Access Token: <%# current_user.access_token %></li>-->
         </ul>
       </div>
