Added the ability to limit the course viewing to the current context.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,4 +23,7 @@
   <div class="center">
     <%= link_to "Get Started!", courses_path, class: "btn btn-lg btn-default" %>
   </div>
+  <div class="center">
+    <%= link_to "Get Started with a course!", course_path(session[:course_id]), class: "btn btn-lg btn-default" %>
+  </div>
 </div>
