Added app specific settings to xml configuration.

--- a/app/views/lti/configuration.xml.erb
+++ b/app/views/lti/configuration.xml.erb
@@ -8,12 +8,12 @@
     http://www.imsglobal.org/xsd/imsbasiclti_v1p0 http://www.imsglobal.org/xsd/lti/ltiv1p0/imsbasiclti_v1p0.xsd
     http://www.imsglobal.org/xsd/imslticm_v1p0 http://www.imsglobal.org/xsd/lti/ltiv1p0/imslticm_v1p0.xsd
     http://www.imsglobal.org/xsd/imslticp_v1p0 http://www.imsglobal.org/xsd/lti/ltiv1p0/imslticp_v1p0.xsd">
-    <blti:launch_url>https://example.com/attendance</blti:launch_url>
-    <blti:title>Attendance</blti:title>
-    <blti:description>Provides an interactive seating chart and attendance tool</blti:description>
+    <blti:launch_url>http://0.0.0.0:3001/lti</blti:launch_url>
+    <blti:title>GradeExport</blti:title>
+    <blti:description>This App helps instructors export student final grades to SIS with ease!</blti:description>
     <blti:extensions platform="canvas.instructure.com">
       <lticm:property name="privacy_level">public</lticm:property>
-      <lticm:property name="domain">example.com</lticm:property>
+      <lticm:property name="domain">http://0.0.0.0:3001</lticm:property>
       <lticm:options name="course_navigation">
         <lticm:property name="visibility">admins</lticm:property>
         <lticm:property name="enabled">true</lticm:property>
