Modified the View for grading schemes, added delete functionality to grading schemes, added jQuery function to fade out alerts after 6s.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -201,3 +201,26 @@ input {
   color: #6c8a9f;
   padding-bottom: 16px;
 }
+
+.panel-default {
+  .panel-heading {
+    background-color: white;
+  }
+}
+
+.action-icon {
+  color: #777777;
+}
+
+#delete {
+  margin-left: 20px;
+  &:hover {
+    color: #d9534f;
+  }
+}
+
+#edit {
+  &:hover {
+    color: #337ab7;
+  }
+}
