--- a/app/views/grade_export/course.html.erb
+++ b/app/views/grade_export/course.html.erb
@@ -43,7 +43,7 @@
       </div>
       <div class="modal-body">
         <div class="alert alert-warning">
-          <strong>Warning!</strong> Please apply a grading standard to the final grades before the import.
+          <strong>Warning!</strong> Please apply a grading standard to the final grades before export.
         </div>
       </div>
       <div class="modal-footer">
