--- a/app/views/grading_standards/show.html.erb
+++ b/app/views/grading_standards/show.html.erb
@@ -1,18 +1,8 @@
-<% provide(:title, 'Grading Schemes') %>
-
-<div class="container">
-  <h3>Your Grading Standards:</h3>
-  <hr>
-</div>
+<% provide(:title, 'Grading Scheme') %>
 
 <div class="w3-cell-row">
-  <% @grading_standards.each do |grading_standard| %>
-      <p>
-        <strong> <%= grading_standard[:title] %> </strong>
-            <% grading_standard.grading_scheme.each do |gs| %>
-            <br /><%= gs.name %> -> <%= gs.percentage %>
-        <% end %>
-      </p>
+  <strong> <%= @grading_standard[:title] %> </strong>
+  <% @grading_standard.grading_scheme.each do |gs| %>
+      <br/><%= gs.name %> : <%= gs.percentage %>
   <% end %>
 </div>
-cle
