--- a/app/views/grading_standards/new.html.erb
+++ b/app/views/grading_standards/new.html.erb
@@ -17,3 +17,12 @@
     <% end %>
   </div>
 </div>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_tag({controller: "grading_standards", action: "create"}, method: "post") do %>
+        <label for="grading_standard_title">Title</label>
+        <%= text_field(:grading_standard, :title) %>
+    <% end %>
+  </div>
+</div>
