--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,6 +14,8 @@
         <li><%= link_to "Home", logged_in?? current_user : root_path %></li>
         <li><%= link_to "Help", help_path %></li>
         <% if logged_in? %>
+            <li><%= link_to "Course", course_path(session[:course_id]) %></li>
+            <li><%= link_to "Grading Standards", grading_standards_path %></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 Account <b class="caret"></b>
