Made changes to allow saving updates to grading standards

--- a/app/views/lti/configuration.xml.erb
+++ b/app/views/lti/configuration.xml.erb
@@ -16,6 +16,7 @@
       <lticm:property name="domain">http://0.0.0.0:3001</lticm:property>
       <lticm:options name="course_navigation">
         <lticm:property name="visibility">admins</lticm:property>
+        <lticm:property name="default">disabled</lticm:property>
         <lticm:property name="enabled">true</lticm:property>
       </lticm:options>
     </blti:extensions>
