--- a/app/views/grade_export/course.html.erb
+++ b/app/views/grade_export/course.html.erb
@@ -32,7 +32,6 @@
   </div>
 </div>
 
-<%# @grading_standard %>
 <!-- Modal -->
 <div class="modal fade" id="myModal" role="dialog">
   <div class="modal-dialog modal-lg">
@@ -48,6 +47,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <%= link_to '<span class="glyphicon glyphicon-plus"></span> Apply'.html_safe, apply_grading_scheme_path(@course['id']), method: :post, class: "btn btn-primary" %>
       </div>
     </div>
   </div>
