--- a/app/views/grading_standards/edit.html.erb
+++ b/app/views/grading_standards/edit.html.erb
@@ -1,22 +1,42 @@
 <% provide(:title, "Edit Grading Standard") %>
-<h1>Update Grading Standard</h1>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@grading_standard) do |f| %>
-        <%= render 'shared/grading_error_messages' %>
+<div class="container">
+  <h3>Update Grading Standard</h3>
+  <hr>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <%= form_for @grading_standard, :html => {:class => 'form-horizontal'} do |f| %>
+          <%= render 'shared/grading_error_messages' %>
 
-        <%= f.label :title %>
-        <%= f.text_field :title, class: 'form-control' %>
+          <div class="form-group">
+            <%= f.label :title, class: 'control-label col-sm-2' %>
+            <div class="col-sm-10">
+              <%= f.text_field :title, class: 'form-control' %>
+            </div>
+          </div>
 
-        <%= f.fields_for :grading_scheme do |sf| %>
-            <%= sf.label :name %>
-            <%= sf.text_field :name %>
-            <%= sf.label :percentage %>
-            <%= sf.text_field :percentage %>
-        <% end %>
+          <%= f.fields_for :grading_scheme do |sf| %>
+              <div class="col-lg-6 col-md-6">
+                <div class="form-group">
+                  <%= sf.label :name, class: 'control-label col-sm-4' %>
+                  <div class="col-sm-8">
+                    <%= sf.text_field :name, :readonly => true, class: 'form-control' %>
+                  </div>
+                </div>
+              </div>
 
-        <%= f.submit "Save changes", class: "btn btn-primary" %>
-    <% end %>
+              <div class="col-lg-6 col-md-6">
+                <div class="form-group">
+                  <%= sf.label :percentage, class: 'control-label col-sm-6' %>
+                  <div class="col-sm-6">
+                    <%= sf.text_field :percentage, class: 'form-control' %>
+                  </div>
+                </div>
+              </div>
+          <% end %>
+          <hr>
+          <%= f.submit "Save changes", class: "btn btn-primary" %>
+      <% end %>
+    </div>
   </div>
 </div>
