--- a/app/views/grading_standards/index.html.erb
+++ b/app/views/grading_standards/index.html.erb
@@ -5,12 +5,12 @@
   <hr>
   <div class="row">
     <% @grading_standards.each do |grading_standard| %>
-        <div class="col-sm-6 col-md-4">
+        <div class="col-md-6">
           <div class="panel panel-default">
             <!-- Default panel contents -->
             <div class="panel-heading">
               <%= grading_standard[:title] %>
-              <%= link_to '<span id="delete" class="glyphicon glyphicon-remove pull-right action-icon" title="Remove grading scheme"></span>'.html_safe, grading_standard_path(grading_standard[:id]), method: :delete %>
+              <%= link_to '<span id="delete" class="glyphicon glyphicon-trash pull-right action-icon" title="Delete grading scheme"></span>'.html_safe, grading_standard_path(grading_standard[:id]), method: :delete, format: :html, data: { confirm: "Are you sure you want to delete #{grading_standard[:title]}?"} %>
               <%= link_to '<span id="edit" class="glyphicon glyphicon-pencil pull-right action-icon" title="Edit grading scheme"></span>'.html_safe, edit_grading_standard_path(grading_standard[:id]) %>
               <!--<a href="#"><span id="delete" class="glyphicon glyphicon-remove pull-right action-icon"></span></a>-->
               <!--<a href="#"><span id="edit" class="glyphicon glyphicon-pencil pull-right action-icon" title="Edit grading scheme"></span></a>-->
