Made changes to enable pushing grading schemes to Canvas through the API.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -212,6 +212,10 @@ input {
   color: #777777;
 }
 
+.btn-submit {
+  width: 30%;
+}
+
 #delete {
   margin-left: 20px;
   &:hover {
@@ -224,3 +228,5 @@ input {
     color: #337ab7;
   }
 }
+
+
