--- a/app/views/grading_standards/new.html.erb
+++ b/app/views/grading_standards/new.html.erb
@@ -8,18 +8,20 @@
       <%= form_for @grading_standard, :html => {:class => 'form-horizontal'} do |f| %>
           <%= render 'shared/grading_error_messages' %>
 
-          <div class="form-group">
-            <%= f.label :title, class: 'control-label col-sm-2' %>
-            <div class="col-sm-10">
-              <%= f.text_field :title, class: 'form-control' %>
+          <div class="col-md-12">
+            <div class="form-group">
+              <%= f.label :title, class: 'control-label col-sm-3' %>
+              <div class="col-sm-9">
+                <%= f.text_field :title, class: 'form-control', autofocus: true %>
+              </div>
             </div>
           </div>
 
           <%= f.fields_for :grading_scheme do |sf| %>
               <div class="col-lg-6 col-md-6">
                 <div class="form-group">
-                  <%= sf.label :name, class: 'control-label col-sm-4' %>
-                  <div class="col-sm-8">
+                  <%= sf.label :name, class: 'control-label col-sm-6' %>
+                  <div class="col-sm-6">
                     <%= sf.text_field :name, :readonly => true, class: 'form-control' %>
                   </div>
                 </div>
@@ -35,7 +37,9 @@
               </div>
           <% end %>
           <hr>
-          <%= f.submit "Save changes", class: "btn btn-primary" %>
+          <div class="col-md-12">
+            <%= f.submit "Save changes", class: "btn btn-primary btn-submit pull-right" %>
+          </div>
       <% end %>
     </div>
   </div>
