--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,8 @@
 <head>
   <title><%= full_title(yield(:title)) %></title>
   <%= csrf_meta_tags %>
-  <%= stylesheet_link_tag    'application', media: 'all',
-                             'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag 'application', media: 'all',
+                          'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   <%= render 'layouts/shim' %>
 </head>
@@ -12,7 +12,10 @@
 <%= render 'layouts/header' %>
 <div class="container">
   <% flash.each do |message_type, message| %>
-      <div id="alert" class="alert alert-<%= message_type %>"><%= message %></div>
+      <div id="alert" class="alert alert-<%= message_type %>"><%= message %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span></button>
+      </div>
   <% end %>
   <%= yield %>
   <%= render 'layouts/footer' %>
