adding a new UI element to upload a grading standard to Canvas.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -229,4 +229,14 @@ input {
   }
 }
 
+.add-icon-margin {
+  margin-left: 20px;
+}
+
+.icon-hover-color {
+  &:hover {
+    color: #337ab7;
+  }
+}
+
 
