--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,28 +11,9 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", logged_in?? current_user : root_path %></li>
-        <li><%= link_to "Help", help_path %></li>
-        <% if logged_in? %>
             <li><%= link_to "Course", course_path(session[:course_id]) %></li>
             <li><%= link_to "Grading Standards", grading_standards_path %></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                Account <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
-                <li><%= link_to "Profile", current_user %></li>
-                <li><%= link_to "Settings", '#' %></li>
-                <li class="divider"></li>
-                <li>
-                  <%= link_to "Log out", logout_path, method: :delete %>
-                </li>
-              </ul>
-            </li>
-        <% else %>
-            <li><%= link_to "Log in", login_path %></li>
-        <% end %>
       </ul>
-    </div><!--/.nav-collapse -->
+    </div>
   </div>
 </nav>
