--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,7 +31,7 @@
   <h1>Welcome to Grade Export</h1>
 
   <h2>
-    This application is build to help you export your grades to SIS with ease.
+    This application is built to help you export your grades to SIS with ease.
   </h2>
   <br>
   <%= link_to "Get Started", course_path(session[:course_id]), class: "btn btn-lg btn-default" %>
