--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,7 @@
   <h1>Welcome to Grade Export</h1>
 
   <h2>
-    This application is build to help you export your grades to SIS with ease.
+    This application is built to help you export your grades to SIS with ease.
   </h2>
   <br>
   <%= link_to "Login via SFU Canvas", 'https://canvas.sfu.ca', class: "btn btn-lg btn-default" %>
